deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cueme-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cueme-web
  template:
    metadata:
      labels:
        app: cueme-web
    spec:
      containers:
        - image: krispykalsi/cueme-web:1.1
          name: cueme-web
