service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cueme-web
  labels:
    app: cueme-web
spec:
  ports:
    - name: "cueme-web"
      port: 5000
  selector:
    app: cueme-web
