ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: cueme-web
  name: cueme-web-ingress
spec:
  rules:
    - host: cueme.xyz
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: cueme-web
                port:
                  number: 5000
